--- a/bib/composable_scheduler_activations-2016_abstract.html
+++ b/bib/composable_scheduler_activations-2016_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/composable_scheduler_activations.pdf">Composable scheduler activations for Haskell</a> &middot; Simon Marlow
+        Composable scheduler activations for Haskell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/composable_scheduler_activations.pdf">Composable scheduler activations for Haskell</a></h1>
-  <p>(K. C. Sivaramakrishnan, Tim Harris, Simon Marlow, Simon Peyton Jones) <em>Journal of Functional Programming</em>, 26, pages e9 (39 pages), 2016 <a href="composable_scheduler_activations-2016.bib">BibTeX</a></p>
+  <h1 class="page-title">Composable scheduler activations for Haskell</h1>
+  <p>(K. C. Sivaramakrishnan, Tim Harris, Simon Marlow, Simon Peyton Jones) <em>Journal of Functional Programming</em>, 26, pages e9 (39 pages), 2016</p>
+<p><a href="http://simonmar.github.io/bib/papers/composable_scheduler_activations.pdf">Full Paper</a> | <a href="composable_scheduler_activations-2016.bib">BibTeX</a></p>
 <p>The runtime for a modern, concurrent, garbage collected language like Java or Haskell is like an operating system: sophisticated, complex, performant, but alas very hard to change. If more of the runtime system were in the high-level language, it would be far more modular and malleable. In this paper, we describe a novel concurrency substrate design for the Glasgow Haskell Compiler that allows multicore schedulers for concurrent and parallel Haskell programs to be safely and modularly described as libraries in Haskell. The approach relies on abstracting the interface to the user-implemented schedulers through scheduler activations, together with the use of Software Transactional Memory to promote safety in a multicore context.</p>
 </div>
 
