--- a/bib/concffi04_abstract.html
+++ b/bib/concffi04_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/conc-ffi.pdf">Extending the {H}askell Foreign Function Interface with Concurrency</a> &middot; Simon Marlow
+        Extending the {H}askell Foreign Function Interface with Concurrency &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/conc-ffi.pdf">Extending the {H}askell Foreign Function Interface with Concurrency</a></h1>
-  <p>(Simon Marlow, Simon Peyton Jones, Wolfgang Thaller) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, pages 57–68, Snowbird, Utah, USA, September 2004 <a href="concffi04.bib">BibTeX</a></p>
+  <h1 class="page-title">Extending the {H}askell Foreign Function Interface with Concurrency</h1>
+  <p>(Simon Marlow, Simon Peyton Jones, Wolfgang Thaller) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, pages 57–68, Snowbird, Utah, USA, September 2004</p>
+<p><a href="http://simonmar.github.io/bib/papers/conc-ffi.pdf">Full Paper</a> | <a href="concffi04.bib">BibTeX</a></p>
 <p>A Haskell system that includes both the Foreign Function Interface and the Concurrent Haskell extension must consider how Concurrent Haskell threads map to external Operating System threads for the purposes of specifying in which thread a foreign call is made.</p>
 <p>Many concurrent languages take the easy route and specify a one-to-one correspondence between the language’s own threads and external OS threads. However, OS threads tend to be expensive, so this choice can limit the performance and scalability of the concurrent language.</p>
 <p>The main contribution of this paper is a language design that provides a neat solution to this problem, allowing the implementor of the language enough flexibility to provide cheap lightweight threads, while still providing the programmer with control over the mapping between internal threads and external threads where necessary.</p>
