--- a/bib/evalapplyjfp06_abstract.html
+++ b/bib/evalapplyjfp06_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/evalapplyjfp06.pdf">Making a fast curry: push/enter vs. eval/apply for higher-order languages</a> &middot; Simon Marlow
+        Making a fast curry: push/enter vs. eval/apply for higher-order languages &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/evalapplyjfp06.pdf">Making a fast curry: push/enter vs. eval/apply for higher-order languages</a></h1>
-  <p>(Simon Marlow, Simon Peyton Jones) <em>Journal of Functional Programming</em>, 16(4–5):415–449, July 2006 <a href="evalapplyjfp06.bib">BibTeX</a></p>
+  <h1 class="page-title">Making a fast curry: push/enter vs. eval/apply for higher-order languages</h1>
+  <p>(Simon Marlow, Simon Peyton Jones) <em>Journal of Functional Programming</em>, 16(4–5):415–449, July 2006</p>
+<p><a href="http://simonmar.github.io/bib/papers/evalapplyjfp06.pdf">Full Paper</a> | <a href="evalapplyjfp06.bib">BibTeX</a></p>
 <p>Higher-order languages that encourage currying are typically implemented using one of two basic evaluation models: push/enter or eval/apply. Implementors use their intuition and qualitative judgements to choose one model or the other.</p>
 <p>Our goal in this paper is to provide, for the first time, a more substantial basis for this choice, based on our qualitative and quantitative experience of implementing both models in a state-of-the-art compiler for Haskell.</p>
 <p>Our conclusion is simple, and contradicts our initial intuition: compiled implementations should use eval/apply.</p>
