--- a/bib/haddock02_abstract.html
+++ b/bib/haddock02_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/haddock.pdf">{H}addock, A {H}askell Documentation Tool</a> &middot; Simon Marlow
+        {H}addock, A {H}askell Documentation Tool &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/haddock.pdf">{H}addock, A {H}askell Documentation Tool</a></h1>
-  <p>(Simon Marlow) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, Pittsburgh Pennsylvania, USA, ACM Press, October 2002 <a href="haddock02.bib">BibTeX</a></p>
+  <h1 class="page-title">{H}addock, A {H}askell Documentation Tool</h1>
+  <p>(Simon Marlow) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, Pittsburgh Pennsylvania, USA, ACM Press, October 2002</p>
+<p><a href="http://simonmar.github.io/bib/papers/haddock.pdf">Full Paper</a> | <a href="haddock02.bib">BibTeX</a></p>
 <p>This paper describes Haddock, a tool for automatically generating documentation from Haskell source code. Haddock’s unique approach to source code annotations provides a useful separation between the implementation of a library and the interface (and hence also the documentation) of that library, so that as far as possible the documentation annotations in the source code do not affect the programmer’s freedom over the structure of the implementation. The internal structure and implementation of Haddock is also discussed.</p>
 </div>
 
