--- a/bib/local-gc-2011_abstract.html
+++ b/bib/local-gc-2011_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/local-gc.pdf">Multicore Garbage Collection with Local Heaps</a> &middot; Simon Marlow
+        Multicore Garbage Collection with Local Heaps &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/local-gc.pdf">Multicore Garbage Collection with Local Heaps</a></h1>
-  <p>(Simon Marlow, Simon Peyton Jones) <em>ISMM ’11: Proceedings of the 10th International Symposium on Memory Management</em>, San Jose, California, ACM, June 2011 <a href="local-gc-2011.bib">BibTeX</a></p>
+  <h1 class="page-title">Multicore Garbage Collection with Local Heaps</h1>
+  <p>(Simon Marlow, Simon Peyton Jones) <em>ISMM ’11: Proceedings of the 10th International Symposium on Memory Management</em>, San Jose, California, ACM, June 2011</p>
+<p><a href="http://simonmar.github.io/bib/papers/local-gc.pdf">Full Paper</a> | <a href="local-gc-2011.bib">BibTeX</a></p>
 <p>In a parallel, shared-memory, language with a garbage collected heap, it is desirable for each processor to perform minor garbage collections independently. Although obvious, it is difficult to make this idea pay off in practice, especially in languages where mutation is common. We present several techniques that substantially improve the state of the art. We describe these techniques in the context of a full-scale implementation of Haskell, and demonstrate that our local-heap collector substantially improves scaling, peak performance, and robustness.</p>
 </div>
 
