--- a/bib/lockfreedatastructures06_abstract.html
+++ b/bib/lockfreedatastructures06_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/lockfreedatastructures.pdf">Lock Free Data Structures using STMs in {H}askell</a> &middot; Simon Marlow
+        Lock Free Data Structures using STMs in {H}askell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/lockfreedatastructures.pdf">Lock Free Data Structures using STMs in {H}askell</a></h1>
-  <p>(Anthony Discolo, Tim Harris, Simon Marlow, Simon Peyton Jones, Satnam Singh) <em>FLOPS 2006: Eighth International Symposium on Functional and Logic Programming</em>, Fuji Susono, JAPAN, April 2006 <a href="lockfreedatastructures06.bib">BibTeX</a></p>
+  <h1 class="page-title">Lock Free Data Structures using STMs in {H}askell</h1>
+  <p>(Anthony Discolo, Tim Harris, Simon Marlow, Simon Peyton Jones, Satnam Singh) <em>FLOPS 2006: Eighth International Symposium on Functional and Logic Programming</em>, Fuji Susono, JAPAN, April 2006</p>
+<p><a href="http://simonmar.github.io/bib/papers/lockfreedatastructures.pdf">Full Paper</a> | <a href="lockfreedatastructures06.bib">BibTeX</a></p>
 <p>This paper explores the feasibility of re-expressing concurrent algorithms with explicit locks in terms of lock free code written using Haskell’s implementation of software transactional memory. Experimental results are presented which show that for multi-processor systems the simpler lock free implementations offer superior performance when compared to their corresponding lock based implementations.</p>
 </div>
 
