--- a/bib/monad-par-2011_abstract.html
+++ b/bib/monad-par-2011_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/monad-par.pdf">A Monad for Deterministic Parallelism</a> &middot; Simon Marlow
+        A Monad for Deterministic Parallelism &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/monad-par.pdf">A Monad for Deterministic Parallelism</a></h1>
-  <p>(Simon Marlow, Ryan Newton, Simon Peyton Jones) <em>Haskell ’11: Proceedings of the Fourth ACM SIGPLAN Symposium on Haskell</em>, Tokyo, Japan, ACM, 2011 <a href="monad-par-2011.bib">BibTeX</a></p>
+  <h1 class="page-title">A Monad for Deterministic Parallelism</h1>
+  <p>(Simon Marlow, Ryan Newton, Simon Peyton Jones) <em>Haskell ’11: Proceedings of the Fourth ACM SIGPLAN Symposium on Haskell</em>, Tokyo, Japan, ACM, 2011</p>
+<p><a href="http://simonmar.github.io/bib/papers/monad-par.pdf">Full Paper</a> | <a href="monad-par-2011.bib">BibTeX</a></p>
 <p>We present a new programming model for deterministic parallel computation in a pure functional language. The model is monadic and has explicit granularity, but allows dynamic construction of dataflow networks that are scheduled at runtime, while remaining deterministic and pure. The implementation is based on monadic concurrency, which has until now only been used to simulate concurrency in functional languages, rather than to provide parallelism. We present the API with its semantics, and argue that parallel execution is deterministic. Furthermore, we present a complete work-stealing scheduler implemented as a Haskell library, and we show that it performs at least as well as the existing parallel programming models in Haskell.</p>
 </div>
 
