--- a/bib/multicore-ghc-09_abstract.html
+++ b/bib/multicore-ghc-09_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/multicore-ghc.pdf">Runtime Support for Multicore {H}askell</a> &middot; Simon Marlow
+        Runtime Support for Multicore {H}askell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/multicore-ghc.pdf">Runtime Support for Multicore {H}askell</a></h1>
-  <p>(Simon Marlow, Simon Peyton Jones, Satnam Singh) <em>ICFP ’09: Proceeding of the 14th ACM SIGPLAN International Conference on Functional Programming</em>, Edinburgh, Scotland, August 2009 <a href="multicore-ghc-09.bib">BibTeX</a></p>
+  <h1 class="page-title">Runtime Support for Multicore {H}askell</h1>
+  <p>(Simon Marlow, Simon Peyton Jones, Satnam Singh) <em>ICFP ’09: Proceeding of the 14th ACM SIGPLAN International Conference on Functional Programming</em>, Edinburgh, Scotland, August 2009</p>
+<p><a href="http://simonmar.github.io/bib/papers/multicore-ghc.pdf">Full Paper</a> | <a href="multicore-ghc-09.bib">BibTeX</a></p>
 <p>Purely functional programs should run well on parallel hardware because of the absence of side effects, but it has proved hard to realise this potential in practice. Plenty of papers describe promising ideas, but vastly fewer describe real implementations with good wall-clock performance. We describe just such an implementation, and quantitatively explore some of the complex design tradeoffs that make such implementations hard to build. Our measurements are necessarily detailed and specific, but they are reproducible, and we believe that they offer some general insights.</p>
 </div>
 
