--- a/bib/stm05_abstract.html
+++ b/bib/stm05_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/stm.pdf">Composable Memory Transactions</a> &middot; Simon Marlow
+        Composable Memory Transactions &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/stm.pdf">Composable Memory Transactions</a></h1>
-  <p>(Tim Harris, Simon Marlow, Simon Peyton Jones, Maurice Herlihy) <em>PPoPP’05: ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</em>, Chicago, Illinois, June 2005 <a href="stm05.bib">BibTeX</a></p>
+  <h1 class="page-title">Composable Memory Transactions</h1>
+  <p>(Tim Harris, Simon Marlow, Simon Peyton Jones, Maurice Herlihy) <em>PPoPP’05: ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</em>, Chicago, Illinois, June 2005</p>
+<p><a href="http://simonmar.github.io/bib/papers/stm.pdf">Full Paper</a> | <a href="stm05.bib">BibTeX</a></p>
 <p>Writing concurrent programs is notoriously difficult, and is of increasing practical importance. A particular source of concern is that even correctly-implemented concurrency abstractions cannot be composed together to form larger abstractions. In this paper we present a new concurrency model, based on , that offers far richer composition. All the usual benefits of transactional memory are present (e.g. freedom from deadlock), but in addition we describe new modular forms of  and  that have been inaccessible in earlier work.</p>
 </div>
 
