--- a/bib/erltc97_abstract.html
+++ b/bib/erltc97_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/erltc.pdf">A practical subtyping system for Erlang</a> &middot; Simon Marlow
+        A practical subtyping system for Erlang &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/erltc.pdf">A practical subtyping system for Erlang</a></h1>
-  <p>(Simon Marlow, Philip Wadler) <em>ICFP ’97: Proceedings of the second ACM SIGPLAN international conference on Functional programming</em>, pages 136–149, Amsterdam, The Netherlands, ACM Press, June 1997 <a href="erltc97.bib">BibTeX</a></p>
+  <h1 class="page-title">A practical subtyping system for Erlang</h1>
+  <p>(Simon Marlow, Philip Wadler) <em>ICFP ’97: Proceedings of the second ACM SIGPLAN international conference on Functional programming</em>, pages 136–149, Amsterdam, The Netherlands, ACM Press, June 1997</p>
+<p><a href="http://simonmar.github.io/bib/papers/erltc.pdf">Full Paper</a> | <a href="erltc97.bib">BibTeX</a></p>
 <p>We present a type system for the programming language Erlang. The type system supports subtyping and declaration-free recursive types, using subtyping constraints. Our system is similar to one explored by Aiken and Wimmers, though it sacrifices expressive power in favour of simplicity. We cover our techniques for type inference, type simplification, and checking when an inferred type conforms to a user-supplied type signature, and report on early experience with our prototype.</p>
 </div>
 
