--- a/bib/ghcinliner02_abstract.html
+++ b/bib/ghcinliner02_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/inline.pdf">Secrets of the Glasgow {H}askell Compiler inliner</a> &middot; Simon Marlow
+        Secrets of the Glasgow {H}askell Compiler inliner &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/inline.pdf">Secrets of the Glasgow {H}askell Compiler inliner</a></h1>
-  <p>(Simon Peyton Jones, Simon Marlow) <em>Journal of Functional Programming</em>, 12(4+5):393–434, July 2002 <a href="ghcinliner02.bib">BibTeX</a></p>
+  <h1 class="page-title">Secrets of the Glasgow {H}askell Compiler inliner</h1>
+  <p>(Simon Peyton Jones, Simon Marlow) <em>Journal of Functional Programming</em>, 12(4+5):393–434, July 2002</p>
+<p><a href="http://simonmar.github.io/bib/papers/inline.pdf">Full Paper</a> | <a href="ghcinliner02.bib">BibTeX</a></p>
 <p>Higher-order languages, such as Haskell, encourage the programmer to build abstractions by composing functions. A good compiler must inline many of these calls to recover an efficiently executable program.</p>
 <p>In principle, inlining is dead simple: just replace the call of a function by an instance of its body. But any compiler-writer will tell you that inlining is a black art, full of delicate compromises that work together to give good performance without unnecessary code bloat.</p>
 <p>The purpose of this paper is, therefore, to articulate the key lessons we learned from a full-scale ``production’’ inliner, the one used in the Glasgow Haskell compiler. We focus mainly on the algorithmic aspects, but we also provide some indicative measurements to substantiate the importance of various aspects of the inliner.</p>
