--- a/bib/marlowthesis_abstract.html
+++ b/bib/marlowthesis_abstract.html
@@ -100,7 +100,8 @@
       <div class="container content">
         <div class="page">
   <h1 class="page-title">Deforestation for Higher-Order Functional Programs</h1>
-  <p>(Simon Marlow) **, PhD thesis, University of Glasgow, 1996 <a href="marlowthesis.bib">BibTeX</a></p>
+  <p>(Simon Marlow) **, PhD thesis, University of Glasgow, 1996</p>
+<p><a href="marlowthesis.bib">BibTeX</a></p>
 <p>Functional programming languages are an ideal medium for program optimisations based on source-to-source transformation techniques. Referential transparency affords opportunities for a wide range of correctness-preserving transformations leading to potent optimisation strategies.</p>
 <p>This thesis builds on deforestation, a program transformation technique due to Wadler that removes intermediate data structures from first-order functional programs.</p>
 <p>Our contribution is to reformulate deforestation for higher-order functional programming languages, and to show that the resulting algorithm terminates given certain syntactic and typing constraints on the input. These constraints are entirely reasonable, indeed it is possible to translate any typed program into the required syntactic form. We show how this translation can be performed automatically and optimally.</p>
