--- a/bib/par-tutorial-cefp-2012_abstract.html
+++ b/bib/par-tutorial-cefp-2012_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/par-tutorial-cefp-2012.pdf">Parallel and Concurrent Programming in {H}askell</a> &middot; Simon Marlow
+        Parallel and Concurrent Programming in {H}askell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/par-tutorial-cefp-2012.pdf">Parallel and Concurrent Programming in {H}askell</a></h1>
-  <p>(Simon Marlow) <em>CEFP 2011</em>, volume 7241 of LNCS, pages 339–401, 2012 <a href="par-tutorial-cefp-2012.bib">BibTeX</a></p>
+  <h1 class="page-title">Parallel and Concurrent Programming in {H}askell</h1>
+  <p>(Simon Marlow) <em>CEFP 2011</em>, volume 7241 of LNCS, pages 339–401, 2012</p>
+<p><a href="http://simonmar.github.io/bib/papers/par-tutorial-cefp-2012.pdf">Full Paper</a> | <a href="par-tutorial-cefp-2012.bib">BibTeX</a></p>
 <p>Haskell provides a rich set of abstractions for parallel and concurrent programming. This tutorial covers the basic concepts involved in writing parallel and concurrent programs in Haskell, and takes a deliberately practical approach: most of the examples are real Haskell programs that you can compile, run, measure, modify and experiment with. We cover parallel programming with the Eval monad, Evaluation Strategies, and the Par monad. On the concurrent side, we cover threads, MVars, asynchronous exceptions, Software Transactional Memory, the Foreign Function Interface, and briefly look at the construction of high-speed network servers in Haskell.</p>
 </div>
 
