--- a/bib/parallel-gc-08_abstract.html
+++ b/bib/parallel-gc-08_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/parallel-gc.pdf">Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</a> &middot; Simon Marlow
+        Parallel Generational-Copying Garbage Collection with a Block-Structured Heap &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/parallel-gc.pdf">Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</a></h1>
-  <p>(Simon Marlow, Tim Harris, Roshan P. James, Simon Peyton Jones) <em>ISMM ’08: Proceedings of the 7th international symposium on Memory management</em>, Tucson, Arizona, ACM, June 2008 <a href="parallel-gc-08.bib">BibTeX</a></p>
+  <h1 class="page-title">Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</h1>
+  <p>(Simon Marlow, Tim Harris, Roshan P. James, Simon Peyton Jones) <em>ISMM ’08: Proceedings of the 7th international symposium on Memory management</em>, Tucson, Arizona, ACM, June 2008</p>
+<p><a href="http://simonmar.github.io/bib/papers/parallel-gc.pdf">Full Paper</a> | <a href="parallel-gc-08.bib">BibTeX</a></p>
 <p>We present a parallel generational-copying garbage collector implemented for the Glasgow Haskell Compiler. We use a block-structured memory allocator, which provides a natural granularity for dividing the work of GC between many threads, leading to a simple yet effective method for parallelising copying GC. The results are encouraging: we demonstrate wall-clock speedups of on average a factor of 2 in GC time on a commodity 4-core machine with no programmer intervention, compared to our best sequential GC.</p>
 </div>
 
