--- a/bib/pointertagging07_abstract.html
+++ b/bib/pointertagging07_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/ptr-tagging.pdf">Faster laziness using dynamic pointer tagging</a> &middot; Simon Marlow
+        Faster laziness using dynamic pointer tagging &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/ptr-tagging.pdf">Faster laziness using dynamic pointer tagging</a></h1>
-  <p>(Simon Marlow, Alexey Rodriguez Yakushev, Simon Peyton Jones) <em>ICFP ’07: Proceedings of the ACM SIGPLAN international conference on Functional programming</em>, Freiburg, Germany, ACM Press, October 2007 <a href="pointertagging07.bib">BibTeX</a></p>
+  <h1 class="page-title">Faster laziness using dynamic pointer tagging</h1>
+  <p>(Simon Marlow, Alexey Rodriguez Yakushev, Simon Peyton Jones) <em>ICFP ’07: Proceedings of the ACM SIGPLAN international conference on Functional programming</em>, Freiburg, Germany, ACM Press, October 2007</p>
+<p><a href="http://simonmar.github.io/bib/papers/ptr-tagging.pdf">Full Paper</a> | <a href="pointertagging07.bib">BibTeX</a></p>
 <p>In the light of evidence that Haskell programs compiled by GHC exhibit large numbers of mispredicted branches on modern processors, we re-examine the ``tagless’’ aspect of the STG-machine that GHC uses as its evaluation model.</p>
 <p>We propose two tagging strategies: a simple strategy called semi-tagging that seeks to avoid one common source of unpredictable indirect jumps, and a more complex strategy called dynamic pointer-tagging that uses the spare low bits in a pointer to encode information about the pointed-to object. Both of these strategies have been implemented and exhaustively measured in the context of a production compiler, GHC, and the paper contains detailed descriptions of the implementations. Our measurements demonstrate significant performance improvements (14% for dynamic pointer-tagging with only a 2% increase in code size), and we further demonstrate that much of the improvement can be attributed to the elimination of mispredicted branch instructions.</p>
 <p>As part of our investigations we also discovered that one optimisation in the STG-machine, vectored-returns, is no longer worthwhile and we explain why.</p>
