--- a/bib/safe-haskell-2012_abstract.html
+++ b/bib/safe-haskell-2012_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/safe-haskell.pdf">Safe {H}askell</a> &middot; Simon Marlow
+        Safe {H}askell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/safe-haskell.pdf">Safe {H}askell</a></h1>
-  <p>(David Terei, David Mazières, Simon Marlow, Simon Peyton Jones) <em>Haskell ’12: Proceedings of the Fifth ACM SIGPLAN Symposium on Haskell</em>, Copenhagen, Denmark, ACM, 2012 <a href="safe-haskell-2012.bib">BibTeX</a></p>
+  <h1 class="page-title">Safe {H}askell</h1>
+  <p>(David Terei, David Mazières, Simon Marlow, Simon Peyton Jones) <em>Haskell ’12: Proceedings of the Fifth ACM SIGPLAN Symposium on Haskell</em>, Copenhagen, Denmark, ACM, 2012</p>
+<p><a href="http://simonmar.github.io/bib/papers/safe-haskell.pdf">Full Paper</a> | <a href="safe-haskell-2012.bib">BibTeX</a></p>
 <p>Though Haskell is predominantly type-safe, implementations contain a few loopholes through which code can bypass typing and module encapsulation. This paper presents Safe Haskell, a language extension that closes these loopholes. Safe Haskell makes it possible to confine and safely execute untrusted, possibly malicious code. By strictly enforcing types, Safe Haskell allows a variety of different policies from API sandboxing to information-flow control to be implemented easily as monads. Safe Haskell is aimed to be as unobtrusive as possible. It enforces properties that programmers tend to meet already by convention. We describe the design of Safe Haskell and an implementation (currently shipping with GHC) that infers safety for code that lies in a safe subset of the language. We use Safe Haskell to implement an online Haskell interpreter that can securely execute arbitrary untrusted code with no overhead. The use of Safe Haskell greatly simplifies this task and allows the use of a large body of existing code and tools.</p>
 </div>
 
