--- a/bib/shake-2016_abstract.html
+++ b/bib/shake-2016_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        Writing High-Performance Server Applications in {H}askell, Case Study: A {H}askell Web Server &middot; Simon Marlow
+        Non-recursive Make Considered Harmful: Build Systems at Scale &middot; Simon Marlow
       
   </title>
 
@@ -99,11 +99,11 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title">Writing High-Performance Server Applications in {H}askell, Case Study: A {H}askell Web Server</h1>
-  <p>(Simon Marlow) <em>Haskell Workshop</em>, Montreal, Canada, September 2000</p>
-<p><a href="webserver00.bib">BibTeX</a></p>
-<p>Server applications, and in particular network-based server applications, place a unique combination of demands on a programming language: lightweight concurrency, high I/O throughput, and fault tolerance are all important.</p>
-<p>This paper describes a prototype web server written in Concurrent Haskell (with extensions), and presents two useful results: firstly, a conforming server could be written with minimal effort, leading to an implementation in less than 1500 lines of code, and secondly the naive implementation produced reasonable performance. Furthermore, making minor modifications to a few time-critical components improved performance to a level acceptable for anything but the most heavily loaded web servers.</p>
+  <h1 class="page-title">Non-recursive Make Considered Harmful: Build Systems at Scale</h1>
+  <p>(Andrey Mokhov, Neil Mitchell, Simon Peyton Jones, Simon Marlow) <em>Proceedings of the 9th International Symposium on Haskell</em>, pages 170–181, Nara, Japan, ACM, 2016</p>
+<p><a href="http://simonmar.github.io/bib/papers/shake.pdf">Full Paper</a> | <a href="shake-2016.bib">BibTeX</a></p>
+<p>Most build systems start small and simple, but over time grow into hairy monsters that few dare to touch. As we demonstrate in this paper, there are a few issues that cause build systems major scalability challenges, and many pervasively used build systems (e.g. Make) do not scale well.</p>
+<p>This paper presents a solution to the challenges we identify. We use functional programming to design abstractions for build systems, and implement them on top of the Shake library, which allows us to describe build rules and dependencies. To substantiate our claims, we engineer a new build system for the Glasgow Haskell Compiler. The result is more scalable, faster, and spectacularly more maintainable than its Make-based predecessor.</p>
 </div>
 
       </div>
