--- a/bib/webserverjfp_abstract.html
+++ b/bib/webserverjfp_abstract.html
@@ -12,7 +12,7 @@
 
   <title>
       
-        <a href="http://simonmar.github.io/bib/papers/web-server-jfp.pdf">Developing a high-performance web server in {C}oncurrent {H}askell</a> &middot; Simon Marlow
+        Developing a high-performance web server in {C}oncurrent {H}askell &middot; Simon Marlow
       
   </title>
 
@@ -99,8 +99,9 @@
 
       <div class="container content">
         <div class="page">
-  <h1 class="page-title"><a href="http://simonmar.github.io/bib/papers/web-server-jfp.pdf">Developing a high-performance web server in {C}oncurrent {H}askell</a></h1>
-  <p>(Simon Marlow) <em>Journal of Functional Programming</em>, 12(4+5):359–374, July 2002 <a href="webserverjfp.bib">BibTeX</a></p>
+  <h1 class="page-title">Developing a high-performance web server in {C}oncurrent {H}askell</h1>
+  <p>(Simon Marlow) <em>Journal of Functional Programming</em>, 12(4+5):359–374, July 2002</p>
+<p><a href="http://simonmar.github.io/bib/papers/web-server-jfp.pdf">Full Paper</a> | <a href="webserverjfp.bib">BibTeX</a></p>
 <p>Server applications, and in particular network-based server applications, place a unique combination of demands on a programming language: lightweight concurrency, high I/O throughput, and fault tolerance are all important.</p>
 <p>This paper describes a prototype web server written in Concurrent Haskell (with extensions), and presents two useful results: firstly, a conforming server could be written with minimal effort, leading to an implementation in less than 1500 lines of code, and secondly the naive implementation produced reasonable performance. Furthermore, making minor modifications to a few time-critical components improved performance to a level acceptable for anything but the most heavily loaded web servers.</p>
 </div>
