--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,11 @@
           <h3 class="masthead-title">
             <a href="./" title="Home">Simon Marlow</a>
             
+            <span class="masthead-links">
+              <a href="./">Blog</a> |
+              <a href="./pages/pcph.html">Book</a> |
+              <a href="./bib/bib.html">Publications</a>
+            </span>
           </h3>
         </div>
       </div>
