--- a/bib/webserver00_abstract.html
+++ b/bib/webserver00_abstract.html
@@ -75,6 +75,9 @@
     <a class="sidebar-nav-item" href="../bib/bib.html">
       Publications
     </a>
+    <a class="sidebar-nav-item" href="../pages/talks.html">
+      Talks
+    </a>
   </nav>
 
   <div class="sidebar-item">
@@ -96,7 +99,8 @@
             <span class="masthead-links">
               <a href="../">Blog</a> |
               <a href="../pages/pcph.html">Book</a> |
-              <a href="../bib/bib.html">Publications</a>
+              <a href="../bib/bib.html">Publications</a> |
+              <a href="../pages/talks.html">Talks</a>
             </span>
           </h3>
         </div>
@@ -106,7 +110,7 @@
         <div class="page">
   <h1 class="page-title">Writing High-Performance Server Applications in {H}askell, Case Study: A {H}askell Web Server</h1>
   <p>(Simon Marlow) <em>Haskell Workshop</em>, Montreal, Canada, September 2000</p>
-<p><a href="webserver00.bib">BibTeX</a></p>
+<div style="white-space: pre-line;"><a href="webserver00.bib">BibTeX</a></div>
 <p>Server applications, and in particular network-based server applications, place a unique combination of demands on a programming language: lightweight concurrency, high I/O throughput, and fault tolerance are all important.</p>
 <p>This paper describes a prototype web server written in Concurrent Haskell (with extensions), and presents two useful results: firstly, a conforming server could be written with minimal effort, leading to an implementation in less than 1500 lines of code, and secondly the naive implementation produced reasonable performance. Furthermore, making minor modifications to a few time-critical components improved performance to a level acceptable for anything but the most heavily loaded web servers.</p>
 </div>
