--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,9 @@
     <a class="sidebar-nav-item" href="./bib/bib.html">
       Publications
     </a>
+    <a class="sidebar-nav-item" href="./pages/talks.html">
+      Talks
+    </a>
   </nav>
 
   <div class="sidebar-item">
@@ -96,7 +99,8 @@
             <span class="masthead-links">
               <a href="./">Blog</a> |
               <a href="./pages/pcph.html">Book</a> |
-              <a href="./bib/bib.html">Publications</a>
+              <a href="./bib/bib.html">Publications</a> |
+              <a href="./pages/talks.html">Talks</a>
             </span>
           </h3>
         </div>
